# 2LabaRBPO

./: .gitigonre  CMakeLists.txt  func_t8.h  func_t9.h  task1.cpp  task10_lib.lib  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6_func.cpp  task6_main.cpp  task7_func.cpp  task7_main.cpp  task8_main.cpp  task9_func.cpp  task9_main.cpp
